--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,22 @@
 *.xcuserdata
 .DS_Store
 test-artifacts/
+
+node_modules/
+package.json
+package-lock.json
+yarn.lock
+bun.lockb
+
+playwright-report/
+test-results/
+playwright/.cache/
+
+*.spec.js
+*.spec.ts
+test-browser.spec.js
+
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
