--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,57 @@
-.cursorignore
-.vscode/
-*.code-workspace
-*.xcworkspace
-*.xcodeproj
-*.xcuserdata
-.DS_Store
-test-artifacts/
+# Configuration files with secrets
+**/config.json
+**/config.local.json
 
-node_modules/
-package.json
-package-lock.json
-yarn.lock
-bun.lockb
+# Environment files
+.env
+.env.local
+.env.production
 
-playwright-report/
-test-results/
-playwright/.cache/
-
-*.spec.js
-*.spec.ts
-test-browser.spec.js
-
+# Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
-telegram-mcp/config.json
-telegram-mcp/node_modules/
-telegram-mcp/package-lock.json
-06/config.json
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
