--- a/21/back/.env.example
+++ b/21/back/.env.example
@@ -5,6 +5,9 @@ GATHERING_REQUIREMENTS_LLM_TEMPERATURE=0.3
 GATHERING_REQUIREMENTS_LLM_MAX_TOKENS=10000
 GATHERING_REQUIREMENTS_LLM_STREAM=false
 
+HUGGINGFACE_API_KEY=hf_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+HUGGINGFACE_CHAT_URL=https://xxxxxxxxxxxxxxxxx.us-east-1.aws.endpoints.huggingface.cloud/v1/chat/completions
+
 BUILDER_LLM_URL=http://localhost:11434
 BUILDER_LLM_MODEL=codestral:22b
 BUILDER_LLM_TIMEOUT=120
@@ -23,5 +26,3 @@ YCLOUD_DEPLOY_PORT=22
 YCLOUD_DEPLOY_USERNAME=user
 YCLOUD_DEPLOY_PRIVATE_KEY=path-to-private-key
 YCLOUD_DEPLOY_DIR=/var/www/html
-
-
